--- a/roles/webservers/tasks/main.yml
+++ b/roles/webservers/tasks/main.yml
@@ -2,20 +2,20 @@
   apt:
     name: apache2
     state: present
-  when: ansible_distribution == "Ubuntu" and ansible_distribution == "22.04"
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
 
 - name: Enable Apache2
   service:
     name: apache2
     state: started
     enabled: yes
-  when: ansible_distribution == "Ubuntu" and ansible_distribution == "22.04"
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
 
 - name: Deploy web file
   copy: 
-    src: index.html
+    src: /home/ubuntu/ansible_start/roles/files/index.html
     dest: /var/www/html/index.html
     owner: root
     group: root
     mode: 0644
-  when: ansible_distribution == "Ubuntu" and ansible_distribution == "22.04"
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
