--- a/roles/install_docker/tasks/main.yml
+++ b/roles/install_docker/tasks/main.yml
@@ -1,10 +1,34 @@
-- name: Copy Docker file to machine
-  copy:
-    src: /path/to/file
-    dest: /etc/foo.conf
-    owner: root
-    group: root
-    mode: '0644'
+- name: Install Dependency
+  apt:
+    name: "{{item}}"
+    state: present
+    update_cache: yes
+  loop:
+    - apt-transport-https
+    - ca-certificates
+    - curl
+    - gnupg-agent
+    - software-properties-common
+- name: Add GPG Key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+- name: add apt repository
+  apt_repository:
+    repo: deb https://download.docker.com/linux/ubuntu bionic stable
+    state: present
+- name: install docker, docker-cli and conteiner.io
+  apt:
+    name: "{{item}}"
+    state: latest
+    update_cache: yes
+  loop:
+    - docker-ce
+    - docker-ce-cli
+    - containerd.io
+- name: make sure that docker was started and enabled
+  service:
+    name: docker
+    state: started
+    enabled: yes
 
-- name: Install Docker from bash
-  shell: docker.sh 
